# large-agents-pibt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  free-space-mapf.cpp  large-agents-mapf.cpp
circle-large-agents-mapf/: README.md
map/: 64x64.map  9x9.map  (+1 more)
solution-visualisation/: README.md  polygon.py  pyproject.toml  requirements.txt  utils.py  visualize.py  visualize_instance.py
solution-visualisation/map/: .gitignore
solution-visualisation/solutions/: 128.txt  16x16.txt  256.txt  256x256.txt  256x256x200.txt  256x256x500.txt  64x64.txt  arena.txt  maze_128_128_10.txt  paris.txt  passing_trough.txt  room_64_64_16.txt
square-large-agents-mapf/: CMakeLists.txt  README.md  collect-test-large-agents-mapf.cpp  large-agents-mapf.cpp
square-large-agents-mapf/large-agents-pibt/include/: default_params.hpp  exceptions.hpp  lapibt.hpp  mapf_problem.hpp
square-large-agents-mapf/large-agents-pibt/src/: graph_utils.cpp  lapibt.cpp  mapf_problem.cpp  mapf_solver.cpp  paths.cpp  plan.cpp
square-large-agents-mapf/tests/problems/: 16x16.txt  256x256.txt  64x64.txt  arena.txt  lak503d.txt  paris.txt
square-large-agents-mapf/tests/problems/maze_128_128_10/0_1-3/: 10.txt  100.txt  110.txt  120.txt  128.txt  130.txt  140.txt  150.txt  16.txt  160.txt  170.txt  180.txt  190.txt  2.txt  20.txt  200.txt  256.txt  30.txt  32.txt  4.txt  40.txt  50.txt  512.txt  60.txt  64.txt  70.txt  8.txt  80.txt  90.txt
square-large-agents-mapf/tests/problems/other/: 16x16.txt  256x256.txt  64x64.txt  64x64_set.txt  lak503d.txt  maze_128_128_10.txt  paris.txt  passing_trough.txt
(+75 files in other folders)
