[tool.poetry]
name = "la-pibt-visualisation"
version = "0.1.0"
description = ""
authors = ["vladimirKondratyevAqemia <vladimir.kondratyev@aqemia.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
numpy = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
